@@ -18,8 +18,12 @@
  */
 package org.codehaus.groovy.classgen;
 
-import groovy.lang.*;
-import groovy.util.GroovyTestCase;
+import groovy.lang.Binding;
+import groovy.lang.GroovyClassLoader;
+import groovy.lang.GroovyCodeSource;
+import groovy.lang.GroovyObject;
+import groovy.lang.Script;
+import groovy.test.GroovyTestCase;
 import org.codehaus.groovy.ast.ClassNode;
 import org.codehaus.groovy.ast.CompileUnit;
 import org.codehaus.groovy.ast.FieldNode;
@@ -45,8 +49,6 @@ import java.security.PrivilegedAction;
 
 /**
  * Base class for test cases
- *
- * @author <a href="mailto:james@coredevelopers.net">James Strachan</a>
  */
 @Ignore("base class for tests")
 public class TestSupport extends GroovyTestCase implements Opcodes {
@@ -56,11 +58,9 @@ public class TestSupport extends GroovyTestCase implements Opcodes {
     // ClassLoader parentLoader = Thread.currentThread().getContextClassLoader();
     final ClassLoader parentLoader = getClass().getClassLoader();
     protected final GroovyClassLoader loader =
-            (GroovyClassLoader) AccessController.doPrivileged(new PrivilegedAction() {
-                public Object run() {
-                    return new GroovyClassLoader(parentLoader);
-                }
-            });
+            AccessController.doPrivileged(
+                    (PrivilegedAction<GroovyClassLoader>) () -> new GroovyClassLoader(parentLoader)
+            );
     final CompileUnit unit = new CompileUnit(loader, new CompilerConfiguration());
     final ModuleNode module = new ModuleNode(unit);
 
@@ -147,11 +147,9 @@ public class TestSupport extends GroovyTestCase implements Opcodes {
     protected void assertScript(final String text, final String scriptName) throws Exception {
         log.info("About to execute script");
         log.info(text);
-        GroovyCodeSource gcs = (GroovyCodeSource) AccessController.doPrivileged(new PrivilegedAction() {
-            public Object run() {
-                return new GroovyCodeSource(text, scriptName, "/groovy/testSupport");
-            }
-        });
+        GroovyCodeSource gcs = AccessController.doPrivileged(
+                (PrivilegedAction<GroovyCodeSource>) () -> new GroovyCodeSource(text, scriptName, "/groovy/testSupport")
+        );
         Class groovyClass = loader.parseClass(gcs);
         Script script = InvokerHelper.createScript(groovyClass, new Binding());
         script.run();
@@ -166,7 +164,7 @@ public class TestSupport extends GroovyTestCase implements Opcodes {
 
     protected GroovyObject compile(String fileName) throws Exception {
         Class groovyClass = loader.parseClass(new GroovyCodeSource(new File(fileName)));
-        GroovyObject object = (GroovyObject) groovyClass.newInstance();
+        GroovyObject object = (GroovyObject) groovyClass.getDeclaredConstructor().newInstance();
         assertTrue(object != null);
         return object;
     }
